create github pages

--- a/page35.html
+++ b/page35.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Web Builder Description">
   
   
-  <title>Mother's Day activities</title>
+  <title>2021Mother's Day activities</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="ext_menu-by" data-rv-view="31" class="mbr-after-navbar">
+  <section id="ext_menu-by" data-rv-view="607">
 
     <nav class="navbar navbar-dropdown">
         <div class="container">
@@ -61,40 +61,7 @@
 
 </section>
 
-<section id="menu-g4" data-rv-view="38">
-
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
-        <div class="container">
-
-            <div class="mbr-table">
-                <div class="mbr-table-cell">
-
-                    <div class="navbar-brand">
-                        <a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption text-black" href="index.html">fixxface.</a>
-                    </div>
-
-                </div>
-                <div class="mbr-table-cell">
-
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="hamburger-icon"></div>
-                    </button>
-
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
-                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="close-icon"></div>
-                    </button>
-
-                </div>
-            </div>
-
-        </div>
-    </nav>
-
-</section>
-
-<section class="mbr-section" id="msg-box5-bz" data-rv-view="33" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="mbr-section mbr-after-navbar" id="msg-box5-bz" data-rv-view="609" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -112,7 +79,7 @@
                   <h3 class="mbr-section-title display-2"><div><br></div><div>Mother's Day activities</div></h3>
                   <div class="lead">
 
-                    <p>2021/4/26-5/30<br>━━━━━●─────── 5:20<br>⇆ ◁ ❚❚ ▷↻<br><br>𝑴𝒂𝒚 𝑰 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖｜ 在五月，讓我呵護你<br>母親節活動 母親節優惠<br><br><br>✨🔥Top1🔥✨<br>奈美極音速 儀器療程 優惠方案<br>（活動期間內不限次數使用 約的到都可享優惠）<br><br>Ⓐ 煥顏美白提亮療程 優惠 $2799 (原價 $3600)<br>Ⓑ 全臉拉提緊緻療程 優惠 $3500 (原價 $4500)<br>Ⓒ 3D消脂小臉療程 優惠 $7999/10cc (原價 $10000)<br>Ⓓ天使童顏澎潤療程 優惠 $7999/10cc (原價 $10000)<br><br>加碼活動獨家女神套餐<br>A+B<br>原價 $8000 活動優惠$6000<br><br></p><p>✨🪞Top2🪞✨<br>眉毛塑型原價$3600 優惠$1800<br>兩人同行 再折$602(單人$1499)<br><br>角蛋白美睫 優惠1380<br>兩人同行 再折$400 （單人$1180)<br><br>套餐組合<br>眉毛塑型+角蛋白美睫<br>1'+1'套餐優惠= $2599<br><br>+加購睫毛養護增長修護液優惠$1299(原價1580)<br>限量20組<br></p><p>✨🦋 Top3 🦋✨<br>任一臉部保養 升級療程<br>+加購黃金軟膜只要$199元（原價399）<br>+加購藍藻舒緩膜只要$199元（原價399）<br>+加購紅寶石軟膜只要$299元（原價499）<br></p><p></p>
+                    <p>2021/5/1-5/30<br>━━━━━●─────── 5:20<br>⇆ ◁ ❚❚ ▷↻<br><br>𝑴𝒂𝒚 𝑰 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖｜ 在五月，讓我呵護你<br>母親節活動 母親節優惠<br><br><br>✨🔥Top1🔥✨<br>奈美極音速 儀器療程 優惠方案<br>（活動期間內不限次數使用 約的到都可享優惠）<br><br>Ⓐ 煥顏美白提亮療程 優惠 $2799 (原價 $3600)<br>Ⓑ 全臉拉提緊緻療程 優惠 $3500 (原價 $4500)<br>Ⓒ 3D消脂小臉療程 優惠 $7999/10cc (原價 $10000)<br>Ⓓ天使童顏澎潤療程 優惠 $7999/10cc (原價 $10000)<br><br>加碼活動獨家女神套餐<br>A+B<br>原價 $8000 活動優惠$6000<br><br></p><p>✨🪞Top2🪞✨<br>眉毛塑型原價$3600 優惠$1800<br>兩人同行 再折$602(單人$1499)<br><br>角蛋白美睫 優惠1380<br>兩人同行 再折$400 （單人$1180)<br><br>套餐組合<br>眉毛塑型+角蛋白美睫<br>1'+1'套餐優惠= $2599<br><br>+加購睫毛養護增長修護液優惠$1299(原價1580)<br>限量20組<br></p><p>✨🦋 Top3 🦋✨<br>任一臉部保養 升級療程<br>+加購黃金軟膜只要$199元（原價399）<br>+加購藍藻舒緩膜只要$199元（原價399）<br>+加購紅寶石軟膜只要$299元（原價499）<br></p><p></p>
 
                   </div>
 
@@ -128,7 +95,19 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="36" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<section class="mbr-section mbr-section__container" id="buttons1-i4" data-rv-view="612" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">產品優惠product sale !!!</a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">產品優惠product sale !!!</a></div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="614" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
