--- a/page35.html
+++ b/page35.html
@@ -79,7 +79,7 @@
                   <h3 class="mbr-section-title display-2"><div><br></div><div>Mother's Day activities</div></h3>
                   <div class="lead">
 
-                    <p>2021/5/1-5/30<br>━━━━━●─────── 5:20<br>⇆ ◁ ❚❚ ▷↻<br><br>𝑴𝒂𝒚 𝑰 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖｜ 在五月，讓我呵護你<br>母親節活動 母親節優惠<br><br><br>✨🔥Top1🔥✨<br>奈美極音速 儀器療程 優惠方案<br>（活動期間內不限次數使用 約的到都可享優惠）<br><br>Ⓐ 煥顏美白提亮療程 優惠 $2799 (原價 $3600)<br>Ⓑ 全臉拉提緊緻療程 優惠 $3500 (原價 $4500)<br>Ⓒ 3D消脂小臉療程 優惠 $7999/10cc (原價 $10000)<br>Ⓓ天使童顏澎潤療程 優惠 $7999/10cc (原價 $10000)<br><br>加碼活動獨家女神套餐<br>A+B<br>原價 $8000 活動優惠$6000<br><br></p><p>✨🪞Top2🪞✨<br>眉毛塑型原價$3600 優惠$1800<br>兩人同行 再折$602(單人$1499)<br><br>角蛋白美睫 優惠1380<br>兩人同行 再折$400 （單人$1180)<br><br>套餐組合<br>眉毛塑型+角蛋白美睫<br>1'+1'套餐優惠= $2599<br><br>+加購睫毛養護增長修護液優惠$1299(原價1580)<br>限量20組<br></p><p>✨🦋 Top3 🦋✨<br>任一臉部保養 升級療程<br>+加購黃金軟膜只要$199元（原價399）<br>+加購藍藻舒緩膜只要$199元（原價399）<br>+加購紅寶石軟膜只要$299元（原價499）<br></p><p></p>
+                    <p>2021/5/1-5/30<br>━━━━━●─────── 5:20<br>⇆ ◁ ❚❚ ▷↻<br><br>𝑴𝒂𝒚 𝑰 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖｜ 在五月，讓我呵護你<br>母親節活動 母親節優惠<br><br><br>✨🔥Top1🔥✨<br>奈美極音速 儀器療程 優惠方案<br>（活動期間內不限次數使用 約的到都可享優惠）<br><br>Ⓐ 煥顏美白提亮療程 優惠 $2799 (原價 $3600)<br>Ⓑ 全臉拉提緊緻療程 優惠 $3500 (原價 $4500)<br>Ⓒ 3D消脂小臉療程 優惠 $7999/10cc (原價 $10000)<br>Ⓓ天使童顏澎潤療程 優惠 $7999/10cc (原價 $10000)<br><br>加碼活動獨家女神套餐<br>A+B<br>原價 $8000 活動優惠$6000<br><br></p><p>✨🪞Top2🪞✨<br>眉毛塑型原價$3600 優惠$1800<br>兩人同行 再折$602(單人$1499)<br><br>角蛋白美睫 優惠1380<br>兩人同行 再折$400 （單人$1180)<br><br>套餐組合<br>眉毛塑型+角蛋白美睫<br>1'+1'套餐優惠= $2599<br>+加購睫毛養護增長修護液優惠$1299(原價1580)<br><br>（活動優惠期間 不得指定美睫師 以可配合時間安排 ）<br><br>✨🦋 Top3 🦋✨<br><br>任一臉部保養 升級療程<br>+加購黃金軟膜只要$199元（原價399）<br>+加購藍藻舒緩膜只要$199元（原價399）<br>+加購紅寶石軟膜只要$299元（原價499）<br></p><p></p>
 
                   </div>
 
@@ -95,12 +95,22 @@
 
 </section>
 
+<section class="mbr-section article mbr-section__container" id="content2-im" data-rv-view="1290" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote><p>⚠️&nbsp; 活動優惠 三選一 ，並且轉發五月活動文到個人IG 限動即可享有以上優惠</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;1. IG拍照打卡標記 2. google上寫下療程評論&nbsp; 3. FB上寫下療程後評論</p></blockquote><blockquote><p>⚠️&nbsp; 五月份單筆消費滿五千 即可參加摸彩活動</p><p><br></p><p>獎項 1.&nbsp;&nbsp;<strong>女神4 PACKS✨組合 ：</strong><span style="font-size: 1.07rem;">卸妝乳 洗面慕斯 精華水  極光精華</span></p><p><span style="font-size: 1.07rem;">獎項2.&nbsp; 奈美極音速「全臉拉提緊緻療程」&nbsp; 免費體驗一次(價值 $4500)</span></p><p><span style="font-size: 1.07rem;">獎項3.&nbsp; 奈美極音速「保濕修護療程 免費體驗一次」(價值$2800)</span></p><p><span style="font-size: 1.07rem;">獎項4.&nbsp; 眉毛塑形 免費體驗一名</span></p><p><span style="font-size: 1.07rem;">獎項5.&nbsp; 角蛋白美睫 免費體驗一名</span></p><p><span style="font-size: 1.07rem;"><br></span></p></blockquote></div>
+        </div>
+    </div>
+
+</section>
+
 <section class="mbr-section mbr-section__container" id="buttons1-i4" data-rv-view="612" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">產品優惠product sale !!!</a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">產品優惠product sale !!!</a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="page34.html" target="_blank">產品優惠product sale !!!</a> <a class="btn btn-black btn-black-outline" href="page34.html" target="_blank">產品優惠product sale !!!</a></div>
             </div>
         </div>
     </div>
