--- a/page35.html
+++ b/page35.html
@@ -94,22 +94,11 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content6-io" data-rv-view="1340" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-is" data-rv-view="1613" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-6 lead"><p></p></div>
-            <div class="col-xs-12 col-md-6 lead"><p></p></div>
-        </div>
-    </div>
-
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content2-im" data-rv-view="586" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>&nbsp;⚠️</p><p>完成一項選項並且轉發五月活動文到個人IG 限動即可享有以上優惠</p><p>1. IG拍照打卡標記</p><p>2. google上寫下療程評論</p><p>3. FB上寫下療程後評論</p></blockquote><blockquote><p>♡ 五月份單筆消費滿五千</p><p>&nbsp; &nbsp; &nbsp; &nbsp;即可參加摸彩活動</p><p><br></p><p>獎項 1.</p><p>女神4 PACKS✨組合 ：</p><p>卸妝乳 洗面慕斯 精華水 極光精華</p><p><br></p><p>獎項2.</p><p>奈美極音速「全臉拉提緊緻療程」 </p><p>免費體驗一次(價值 $4500)</p><p><br></p><p>獎項3.</p><p>奈美極音速「保濕修護療程 」</p><p>免費體驗一次(價值$2800)</p><p><br></p><p>獎項4. 眉毛塑形 免費體驗一名<br></p><p>獎項5. 角蛋白美睫 免費體驗一名<br></p><p><span style="font-size: 1.07rem;"><br></span></p></blockquote></div>
+            <div class="col-xs-12 lead"><p><br></p><p>-------------------------------------------------------------------------(NOTICE )</p><p><br></p><p>1.IG拍照打卡標記</p><p>2.google上寫下療程評論</p><p>3.FB上寫下療程後評論</p><p>以上步驟完成一項</p><p>並且轉發五月活動圖文</p><p>到個人IG 動即可享有以上優惠</p><p><br></p><p>--------------------------------------------------------------------------</p><p><br></p><p>♡五月份單筆消費滿五千 即可參加摸彩活動♡</p><p><strong><br></strong></p><p><strong>獎項 1.</strong></p><p>女神4 PACKS✨組合 ：</p><p>(洗面慕斯 精華水 極光精華)</p><p><strong><br></strong></p><p><strong>獎項2.</strong></p><p>奈美極音速「全臉拉提緊緻療程」</p><p>免費體驗一次(價值 $4500)</p><p><strong><br></strong></p><p><strong>獎項3.</strong></p><p>奈美極音速「保濕修護療程 」</p><p>免費體驗一次(價值$2800)</p><p><br></p><p><strong>獎項4.</strong></p><p>眉毛塑形 免費體驗一名</p><p><strong><br></strong></p><p><strong>獎項5.</strong></p><p>角蛋白美睫 免費體驗一名</p><p><br></p></div>
         </div>
     </div>
 
