create github pages

--- a/page35.html
+++ b/page35.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -24,30 +23,31 @@
   
   
   
+
 </head>
 <body>
   
-  <section id="ext_menu-by" data-rv-view="581">
+  <section id="menu-g4" data-rv-view="643">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="index.html">fixxface</a>
+                        <a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
+                        <a class="navbar-caption text-black" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-after-navbar" id="msg-box5-bz" data-rv-view="583" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="mbr-section mbr-after-navbar" id="msg-box5-bz" data-rv-view="632" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -94,17 +94,27 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-is" data-rv-view="1613" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-is" data-rv-view="635" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><br></p><p>-------------------------------------------------------------------------</p><p>(NOTICE )</p><p><br></p><p>1.IG拍照打卡標記</p><p>2.google上寫下療程評論</p><p>3.FB上寫下療程後評論</p><p>以上步驟完成一項</p><p>並且轉發五月活動圖文</p><p>到個人IG 限動即可享有以上優惠</p><p><br></p><p>--------------------------------------------------------------------------</p><p><br></p><p>♡五月份單筆消費滿五千 即可參加摸彩活動♡</p><p><strong><br></strong></p><p><strong>獎項 1.</strong></p><p>女神4 PACKS✨組合 ：</p><p>(卸妝乳 洗面慕斯 精華水 極光精華)</p><p><strong><br></strong></p><p><strong>獎項2.</strong></p><p>奈美極音速「全臉拉提緊緻療程」</p><p>免費體驗一次(價值 $4500)</p><p><strong><br></strong></p><p><strong>獎項3.</strong></p><p>奈美極音速「保濕修護療程 」</p><p>免費體驗一次(價值$2800)</p><p><br></p><p><strong>獎項4.</strong></p><p>眉毛塑形 免費體驗一名</p><p><strong><br></strong></p><p><strong>獎項5.</strong></p><p>角蛋白美睫 免費體驗一名</p><p><br></p></div>
+            <div class="col-xs-12 lead"><p>( NOTICE )</p><p><br></p><p>1.IG拍照打卡標記</p><p>2.google上寫下療程評論</p><p>3.FB上寫下療程後評論</p><p>以上步驟完成一項</p><p>並且轉發五月活動圖文</p><p>到個人IG 動即可享有以上優惠</p></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-i4" data-rv-view="588" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-im" data-rv-view="637" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote><p>/ 完成一項選項並且轉發五月活動文到個人IG 限動即可享有以上優惠</p><p>1. IG拍照打卡標記</p><p>2. google上寫下療程評論</p><p>3. FB上寫下療程後評論</p></blockquote><blockquote><p><br></p></blockquote></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="buttons1-i4" data-rv-view="639" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -116,7 +126,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="590" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c0" data-rv-view="641" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
@@ -134,5 +144,6 @@
   
   
   
+
 </body>
 </html>
