--- a/page19.html
+++ b/page19.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -28,40 +27,7 @@
 </head>
 <body>
   
-  <section id="ext_menu-6m" data-rv-view="1098" class="mbr-after-navbar">
-
-    <nav class="navbar navbar-dropdown">
-        <div class="container">
-
-            <div class="mbr-table">
-                <div class="mbr-table-cell">
-
-                    <div class="navbar-brand">
-                        <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="index.html">fixxface</a>
-                    </div>
-
-                </div>
-                <div class="mbr-table-cell">
-
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="hamburger-icon"></div>
-                    </button>
-
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
-                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                        <div class="close-icon"></div>
-                    </button>
-
-                </div>
-            </div>
-
-        </div>
-    </nav>
-
-</section>
-
-<section id="menu-g4" data-rv-view="335">
+  <section id="menu-g4" data-rv-view="288">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -94,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-6n" data-rv-view="305" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-6n" data-rv-view="258" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -105,7 +71,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="307" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6o" data-rv-view="260" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -115,7 +81,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="309" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6p" data-rv-view="262" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -125,7 +91,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="311" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6q" data-rv-view="264" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -135,7 +101,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="313" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6r" data-rv-view="266" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -145,7 +111,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="315" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6s" data-rv-view="268" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -155,7 +121,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="317" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6t" data-rv-view="270" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -165,7 +131,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="319" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6v" data-rv-view="272" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -175,7 +141,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="321" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6w" data-rv-view="274" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -185,7 +151,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="323" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-71" data-rv-view="276" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -202,7 +168,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="325" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6x" data-rv-view="278" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -212,7 +178,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="327" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6y" data-rv-view="280" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -222,7 +188,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="329" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-6z" data-rv-view="282" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -232,7 +198,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="331" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-70" data-rv-view="284" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -242,7 +208,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="333" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-74" data-rv-view="286" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
