create github pages

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2"><br>👋👋&nbsp; welcome to my studio !!! 👋👋<br><br></h3>
+                <h3 class="mbr-section-title display-2"><br>👋👋&nbsp; welcome to my studio !!! 👋👋<br></h3>
                 <div>
 
                   <div class="mbr-social-likes" data-counters="false">
@@ -95,7 +95,7 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="4">
     <div class="mbr-figure">
-        <div><img src="assets/images/pink-and-blue-bright-outline-student-internship-graphic-designer-video-resume-talking-presentation-4-1400x788.png"></div>
+        <div><img src="assets/images/pink-gradient-motivational-quote-instagram-story-1080x1920.png"></div>
         
     </div>
 </section>
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">預約須知 ❍ </a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">關於我們 ✹</a></div>
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">預約須知 ❍ </a></div>
             </div>
         </div>
     </div>
