--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption text-black" href="index.html">fixxface.</a>
+                        <a href="index.html" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
+                        <a class="navbar-caption text-black text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
@@ -100,12 +100,12 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-j8" data-rv-view="6" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container" id="buttons1-j8" data-rv-view="6" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">預約須知 ❍ </a></div>
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="page47.html">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="news.html">預約須知 ❍ </a></div>
             </div>
         </div>
     </div>
@@ -142,7 +142,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-parallax-background" id="social-buttons2-fj" data-rv-view="14" style="background-image: url(assets/images/2-1920x1080.png); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons2-fj" data-rv-view="14" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
@@ -167,7 +167,6 @@
   <script src="assets/web/assets/bootstrap4-migrate/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/social-likes/social-likes.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
