--- a/page46.html
+++ b/page46.html
@@ -84,7 +84,7 @@
                   <h3 class="mbr-section-title display-2">眉毛塑形 課程 𝗯𝗿𝗼𝘄𝗹𝗶𝗳𝘁“🖤&nbsp;</h3>
                   <div class="lead">
 
-                    <p><br>一對一教授<br>課後即時上手做客<br>零失敗紀錄，讓你有充分學習時間<br>💯學會快速上手，只需要一堂<br>課後遇到眉毛相關問題都可詢問<br><br><br>🏷️𝗢𝗻𝗲 𝗱𝗮𝘆 𝗰𝗹𝗮𝘀𝘀<br>𝗙𝗶𝘅𝘅𝗳𝗮𝗰𝗲 𝗯𝗿𝗼𝘄𝗹𝗶𝗳𝘁“🖤<br>（眉毛塑型課程）<br><br><br>1名模特示範<br>1名模特操作（需自備模特兒）<br><br>𝗣𝗮𝗿𝘁 𝟭.基本理論 <br>𝗣𝗮𝗿𝘁 𝟮.眉毛理論 眉毛設計<br>𝗣𝗮𝗿𝘁 𝟯.手術方法產品使用方式<br>𝗣𝗮𝗿𝘁 𝟰.影片講解<br>𝗣𝗮𝗿𝘁 𝟱.實際操作<br>𝗣𝗮𝗿𝘁 𝟲.術後管理<br><br>*基本服務操作工具<br>*可以操作20-25位客人的材料<br>*某些副材料可以使用更多人數<br>*材料工具盒<br><br>報名課程需先支付訂金<br>（請於3日內匯款）<br>讓妳收穫滿滿開心下課<br><br>✎鄭重呼籲<br>目前坊間有很多不明來歷且自稱「眉毛塑型」之產品，請大家提高警覺一分錢一分貨，本所無法與來路不明產品或廉價贋品相提並論<br><br></p>
+                    <p><br>一對一教授<br>課後即時上手做客<br>零失敗紀錄，讓你有充分學習時間<br>💯學會快速上手，只需要一堂<br>課後遇到眉毛相關問題都可詢問<br><br><br>🏷️𝗢𝗻𝗲 𝗱𝗮𝘆 𝗰𝗹𝗮𝘀𝘀<br>𝗙𝗶𝘅𝘅𝗳𝗮𝗰𝗲 𝗯𝗿𝗼𝘄𝗹𝗶𝗳𝘁“🖤<br>（眉毛塑型課程）<br><br>1名模特示範<br>1名模特操作（需自備模特兒）<br><br>𝗣𝗮𝗿𝘁 𝟭.基本理論 <br>𝗣𝗮𝗿𝘁 𝟮.眉毛理論 眉毛設計<br>𝗣𝗮𝗿𝘁 𝟯.手術方法產品使用方式<br>𝗣𝗮𝗿𝘁 𝟰.影片講解<br>𝗣𝗮𝗿𝘁 𝟱.實際操作<br>𝗣𝗮𝗿𝘁 𝟲.術後管理<br><br>*基本服務操作工具<br>*可以操作20-25位客人的材料<br>*某些副材料可以使用更多人數<br>*材料工具盒<br><br>報名課程需先支付訂金<br>（請於3日內匯款）<br>讓妳收穫滿滿開心下課<br><br>✎鄭重呼籲<br>目前坊間有很多不明來歷且自稱「眉毛塑型」之產品，請大家提高警覺一分錢一分貨，本所無法與來路不明產品或廉價贋品相提並論<br><br></p>
 
                   </div>
 
