create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">服務項目</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="true">療程介紹<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page51.html">療程總覽</a><a class="dropdown-item text-primary" href="page48.html">獨家儀器療程</a><a class="dropdown-item text-primary" href="page56.html">基本臉部護膚</a><a class="dropdown-item text-primary" href="page20.html">角蛋白睫毛</a><a class="dropdown-item text-primary" href="page52.html">眉毛塑型</a></div></div></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="page47.html">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="news.html">預約須知 ❍ </a></div>
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="page47.html">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="news.html" target="_blank">預約須知 ❍ </a></div>
             </div>
         </div>
     </div>
@@ -130,19 +130,19 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-9z" data-rv-view="12" style="background-color: rgb(34, 34, 34); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-9z" data-rv-view="12" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center">  <a class="btn btn-warning-outline btn-warning" href="page35.html" target="_blank">母親節活動<br>延續到疫情第三級解除除👋<br>2021Mother's Day activities sale<br></a> <a class="btn btn-warning-outline btn-warning" href="page48.html" target="_blank">獨家超流體奈米美學科技<br>new!!!<br></a>     <a class="btn btn-white-outline btn-white" href="page44.html" target="_blank">&nbsp; &nbsp; 課程教學 &nbsp; &nbsp;</a>  <a class="btn btn-white-outline btn-white" href="page51.html" target="_blank">服務療程及項目 </a>  <a class="btn btn-white-outline btn-white" href="products.html" target="_blank">&nbsp; 網路產品販售&nbsp;</a> <a class="btn btn-white-outline btn-white" href="page18.html" target="_blank">你可能很想知道</a></div>
+                <div class="text-xs-center">  <a class="btn btn-info-outline btn-info" href="page35.html" target="_blank">母親節活動<br>延續到疫情第三級解除除👋<br>2021Mother's Day activities sale<br></a> <a class="btn btn-info-outline btn-info" href="page48.html" target="_blank">獨家超流體奈米美學科技<br>new!!!<br></a>     <a class="btn btn-primary-outline btn-primary" href="page44.html" target="_blank">&nbsp; &nbsp; 課程教學 &nbsp; &nbsp;</a>  <a class="btn btn-primary-outline btn-primary" href="page51.html" target="_blank">服務療程及項目 </a>  <a class="btn btn-primary-outline btn-primary" href="products.html" target="_blank">&nbsp; 網路產品販售&nbsp;</a> <a class="btn btn-primary-outline btn-primary" href="page18.html" target="_blank">你可能很想知道</a></div>
             </div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons2-fj" data-rv-view="14" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons2-fj" data-rv-view="14" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
