--- a/page18.html
+++ b/page18.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="256">
+  <section id="menu-g4" data-rv-view="70">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">服務項目</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="true">療程介紹<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page51.html">療程總覽</a><a class="dropdown-item text-primary" href="page48.html">獨家儀器療程</a><a class="dropdown-item text-primary" href="page56.html">基本臉部護膚</a><a class="dropdown-item text-primary" href="page20.html">角蛋白睫毛</a><a class="dropdown-item text-primary" href="page52.html">眉毛塑型</a></div></div></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="253" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-after-navbar" id="msg-box3-6k" data-rv-view="67" style="background-color: rgb(242, 242, 242); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
