--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="51">
+  <section id="menu-g4" data-rv-view="35">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">服務項目</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="true">療程介紹<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page51.html">療程總覽</a><a class="dropdown-item text-primary" href="page48.html">獨家儀器療程</a><a class="dropdown-item text-primary" href="page56.html">基本臉部護膚</a><a class="dropdown-item text-primary" href="page20.html">角蛋白睫毛</a><a class="dropdown-item text-primary" href="page52.html">眉毛塑型</a></div></div></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="45" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="29" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -71,14 +71,14 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="47">
+<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="31">
     <div class="mbr-figure">
         <div><img src="assets/images/mbr-1280x1920.jpg"></div>
         
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="49" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="33" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
