--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">服務項目</a><div class="dropdown-menu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="true">療程介紹<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page51.html">療程總覽</a><a class="dropdown-item text-primary" href="page48.html">獨家儀器療程</a><a class="dropdown-item text-primary" href="page56.html">基本臉部護膚</a><a class="dropdown-item text-primary" href="page20.html">角蛋白睫毛</a><a class="dropdown-item text-primary" href="page52.html">眉毛塑型</a></div></div></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">服務項目</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">療程介紹<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page51.html">療程總覽</a><a class="dropdown-item text-primary" href="page48.html">獨家儀器療程</a><a class="dropdown-item text-primary" href="page56.html">基本臉部護膚</a><a class="dropdown-item text-primary" href="page20.html">角蛋白睫毛</a><a class="dropdown-item text-primary" href="page52.html">眉毛塑型</a></div></div></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -95,7 +95,7 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="4">
     <div class="mbr-figure">
-        <div><img src="assets/images/pink-and-blue-general-report-1-1400x1980.png"></div>
+        <div><img src="assets/images/pink-and-blue-general-report-2-1400x1980.png"></div>
         
     </div>
 </section>
@@ -114,7 +114,7 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-j5" data-rv-view="8">
     <div class="mbr-figure">
-        <div><img src="assets/images/7-2-1400x788.png"></div>
+        <div><img src="assets/images/pink-and-blue-bright-outline-student-internship-graphic-designer-video-resume-talking-presentation-5-1400x788.png"></div>
         
     </div>
 </section>
@@ -135,7 +135,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center">  <a class="btn btn-info-outline btn-info" href="page35.html" target="_blank">母親節活動<br>延續到疫情第三級解除除👋<br>2021Mother's Day activities sale<br></a> <a class="btn btn-info-outline btn-info" href="page48.html" target="_blank">獨家超流體奈米美學科技<br>new!!!<br></a>     <a class="btn btn-primary-outline btn-primary" href="page44.html" target="_blank">&nbsp; &nbsp; 課程教學 &nbsp; &nbsp;</a>  <a class="btn btn-primary-outline btn-primary" href="page51.html" target="_blank">服務療程及項目 </a>  <a class="btn btn-primary-outline btn-primary" href="products.html" target="_blank">&nbsp; 網路產品販售&nbsp;</a> <a class="btn btn-primary-outline btn-primary" href="page18.html" target="_blank">你可能很想知道</a></div>
+                <div class="text-xs-center">  <a class="btn btn-primary-outline btn-primary" href="page35.html" target="_blank">母親節活動<br>延續到疫情第三級解除除👋<br>2021Mother's Day activities sale<br></a> <a class="btn btn-primary-outline btn-primary" href="page48.html" target="_blank">獨家超流體奈米儀器<br></a>     <a class="btn btn-primary-outline btn-primary" href="page44.html" target="_blank">&nbsp; &nbsp; 課程教學 &nbsp; &nbsp;</a>  <a class="btn btn-primary-outline btn-primary" href="page51.html" target="_blank">服務項目 </a>  <a class="btn btn-primary-outline btn-primary" href="products.html" target="_blank">&nbsp; 網路產品販售&nbsp;</a> <a class="btn btn-primary-outline btn-primary" href="page18.html" target="_blank">你可能很想知道</a></div>
             </div>
         </div>
     </div>
